--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 h1 {
-    color: red;
+    color:rgb(62, 78, 219);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
 }
+
+.gif {
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
+
+img {
+    border: 5px solid rgb(75, 67, 182);
+  }
