--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ h1 {
     color:rgb(62, 78, 219);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
+    font-size: 30px;
 }
 
 .gif {
@@ -13,4 +14,27 @@ h1 {
 
 img {
     border: 5px solid rgb(75, 67, 182);
+  }
+
+h2 {
+    color: rgb(0, 140, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+* {
+    background-color: hsl(36, 100%, 95%);
+}
+
+.main-list {
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+h3 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.rainbow {
+    background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);   -webkit-background-clip: text;
+    color: transparent;
   }
